src/management_server/monitoring/prom/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
  
spec:
  selector: 
    app: prometheus-server
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 9090 
      # nodePort: 30000
